# stt-benchmark

./: .env.example  .gitignore  README.md  alex.py  dataset.py  models.py  pyproject.toml  settings.py  test.py  test_whispercpp.py  test_whisperx.py
src/slm/: models.py  translate_dataset.py
src/slm/grammatical_error_correction/: run.py  test_prompt.py
src/slm/prompts/: english.py  french.py  prompt_generator.py
src/stt/: dataset.py  models.py
