[project]
name = "stt-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.1",
    "jiwer>=3.1.0",
    "librosa>=0.11.0",
    "pydantic-settings>=2.9.1",
    "pywhispercpp>=1.3.0",
    "soundfile>=0.13.1",
    "torchaudio>=2.7.0",
    "transformers>=4.51.3",
    "whispercpp>=0.0.17",
]
